# Sophont

./: .gitignore  CONTRIBUTING.md  ClassMap.graphml  ClassMap.md  ClassMap_Aptitudes.graphml  ClassMap_Epigenetics.graphml  ConceptMap.graphml  README.md  character_creation_mockup.py  main.py  mockups.py  pyproject.toml  requirements-dev.txt  requirements.txt  sandbox.py  uielement_character_card.py  uielement_characteristic_builder.py  uielement_package_builder.py  uielement_popchip.py  uielement_skill_builder.py  uielement_travellermaps.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
game/: aptitude_package.py  characteristic.py  characteristic_package.py  event.py  gametime.py  gene.py  genotype.py  knowledge.py  location.py  package.py  personal_day.py  phene.py  skill.py  species.py
game/deprecated/: aptitude_package.py
game/deprecated/mappings/: world_id.py
game/improvedmappings/: aptitudes.py  attributes.py  authoring.py  characteristics.py  demo.py  init_mappings.py  io.py  knowledge_tables.py  knowledges.py  set.py  skill_tables.py  skills.py  utils.py
game/improvedmappings/deprecated/: skill_tables.py
game/mappings/: T5Mappings.xlsx  __init__.py  attributebase.py  authoring.py  characteristics.py  data.py  demo.py  gender.py  init_mappings.py  io.py  knowledges.py  locations.py  milieu.py  set.py  skill_tables.py  skills.py  utils.py  world_id.py
game/mappings/deprecated/: attributes.py  characteristics_tables.py  knowledge_tables.py
game/uid/: guid.py
gui/: draganddrop.py  search.py  styles.py  timeline.py
gui/computed/: upp.py
gui/draggable/: commands.py  disable_tooltip.js  drop_container.py  fab.css  fab.py  inheritance.py
gui/element/: popchip.css  popchip.py
gui/forms/: attribute_builder_base.py  character.py  characteristic_builder.py  gene.py  package_builder.py  phene.py  skill_builder.py
gui/history/: undo.py
gui/initialisation/: character.py  events.py  globals.py  pickables.py  species.py  state.py
gui/tabs/: package_builder.py  sophont.py  species.py
sophont/: acquisitions.py  aptitudes.py  character.py  enums.py  epigenetics.py  personals.py
sophont/mod/: packager.py
t5/: sandbox.py
t5/src/t5humanise/chance/: __init__.py  demo.py  dice.py  pseudo_random.py
(+8 files in other folders)
