[project]
name = "sophont"
version = "0.0.0"
description = "Rapidly-iterable OO sandbox for Traveller 5 (T5) sophont/character modeling, designed for future ECS transition"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Keep this conservative to avoid noisy churn in a fast-iterating sandbox.
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort-like import sorting
  "UP"  # pyupgrade
]
ignore = [
  "E501",  # line length (handled by formatter; avoid churn)
  "UP007",  # prefer typing.Union for py39 compatibility
  "UP045",  # prefer typing.Optional for py39 compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["game", "sophont", "gui", "t5"]

[tool.black]
line-length = 100

target-version = ["py39"]
